--- a/dangtin.html
+++ b/dangtin.html
@@ -22,6 +22,7 @@
     <meta property="og:site_name" content="houseviet.vn"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="vi_VN"/>
+    <link rel="stylesheet" href="assets/css/modules/datapicker/css/datapicker.css"/>
     <link rel="stylesheet" href="assets/gbnd_font/styles.css"/>
     <link rel="stylesheet" href="assets/css/site.css"/>
 </head>
@@ -284,14 +285,14 @@
                     <option value="1">Nữ</option>
                 </select>
             </div>
-            <div class="padding0-20 width100per flex itemsCenter mgTop15">
+            <div class="padding0-20 width100per flex itemsCenter mgTop15 post-inner">
                 <div class="width50per padding5-10">
                     <label class="fn16 fnAsapRegular">Ngày hiệu lực</label>
-                    <input type="text" placeholder="Số toilet">
+                    <input type="text" id="datepicker1" value="22/11/2017">
                 </div>
                 <div class="width50per padding5-10">
                     <label class="fn16 fnAsapRegular">Ngày hết hạn</label>
-                    <input type="text" placeholder="Số toilet">
+                    <input type="text" id="datepicker2" value="22/11/2017">
                 </div>
             </div>
             <div class="padding30">
@@ -340,10 +341,12 @@
     </div>
 </footer>
 <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-<script type="text/javascript" src="assets/js/site.js"></script>
-<script type="text/javascript" src="assets/js/swiper.min.js"></script>
-<script type="text/javascript" src="https://cdn.houseviet.vn/js/jquery.savingcost.js?v=0.0.2"></script>
-<script src="https://cdn.houseviet.vn/js/lazyload.min.js?v=0.0.2"></script>
-<script type="text/javascript" src="https://cdn.houseviet.vn/js/app.core.min.js?v=0.0.2"></script>
+<script type="text/javascript" src="assets/js/datapicker.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#datepicker1').datepicker();
+        $('#datepicker2').datepicker();
+    });
+</script>
 </body>
 </html>
