--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
     <a href="nhamogioi.html">Nha mo gioi tieu bieu</a>
     <a href="nhamogioi_chitiet.html">Nha mo gioi chi tiet</a>
     <a href="dangtin.html">Dang tin</a>
+    <a href="refresh_post.html">Lam moi dang tin</a>
 </body>
 </html>
