--- a/profile_information.html
+++ b/profile_information.html
@@ -86,23 +86,23 @@
         <h3 class="fn13 text-upper colorYellow mgTop30">thông tin liên hệ</h3>
         <div class="padding0-10 mgTop30">
             <div class="flex itemsCenter">
-                <label for="full name">Họ và tên <span class="colorRed"> (*)</span></label>
+                <label>Họ và tên <span class="colorRed"> (*)</span></label>
                 <input type="text" name="full_name">
             </div>
             <div class="flex itemsCenter">
-                <label for="phone">Điện thoại <span class="colorRed"> (*)</span></label>
+                <label>Điện thoại <span class="colorRed"> (*)</span></label>
                 <input type="text" name="phone">
             </div>
             <div class="flex itemsCenter">
-                <label for="phone">Email <span class="colorRed"> (*)</span></label>
+                <label>Email <span class="colorRed"> (*)</span></label>
                 <input type="text" name="email">
             </div>
             <div class="flex itemsCenter">
-                <label for="phone">Ngày sinh </label>
+                <label>Ngày sinh </label>
                 <input type="text" name="birthday">
             </div>
             <div class="flex itemsCenter">
-                <label for="phone">Giới tính</label>
+                <label>Giới tính</label>
                 <select name="gender" class="select-type">
                     <option value="">-- Chọn --</option>
                     <option value="0">Nam</option>
@@ -110,7 +110,7 @@
                 </select>
             </div>
             <div class="flex itemsTop">
-                <label for="phone" class="paddingTop25px">Địa chỉ <span class="colorRed"> (*)</span></label>
+                <label class="paddingTop25px">Địa chỉ <span class="colorRed"> (*)</span></label>
                 <div class="width80per group-address">
                     <select name="city" class="select-type">
                         <option value="city">-- Chọn Tỉnh thành --</option>
@@ -139,7 +139,7 @@
             gif, jpeg)</p>
         <div class="padding0-10 mgTop30">
             <div class="flex justLeft">
-                <label for="none"></label>
+                <label></label>
                 <button class="borderRadius5 btn-upload colorBrown text-upper borderDashed">
                     <i class="icon icon-add-circular-button"></i>
                     <br>
