--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <a href="nhamogioi_chitiet.html">Nha mo gioi chi tiet</a>
     <a href="dangtin.html">Dang tin</a>
     <a href="refresh_post.html">Lam moi dang tin</a>
+    <a href="luutinnhap.html"> Luu tin nhap </a>
 </body>
 </html>
